--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -79,7 +79,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-6.8-rc5
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=1
+pkgrel=2
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -107,9 +107,11 @@ source=(
   "0024-Kernel_tuning-CONFIG_NSPA.patch"
   "0026-Add_support_for_epoll_min_wait.patch"
   "0030-Microsoft_Surface_Support-6.6.patch"
-  "0040-Scheduler-IPC-support-v6.8.patch"
+  "0040-Intel-Thread-Director-IPC-v6.8.patch"
+  "0043-Intel-Thread-Director-Virtualization.patch"
   "0041-sched-fair-Dont_force_smt_balancing_when_CPU_has_spare.patch"
   "0120-Softirq-Fix_lock_imbalance_in_local_bh.patch"
+  "0018-sched-Add_latency_priority_for_CFS_class.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -454,7 +456,7 @@ done
 sha256sums=('702e946d85050640220fbd2504313de1a138510dabc9841fb48a69272e3c3eda'
             '0fdf788e93e7b78eb729d88aeff46d8c86f07b1f038b9658070df4efdac62a11'
             '23ec0f372fabde289fb32a6af638c6cd0d9771a57354b5356970422829ad9917'
-            'd23b2151271df928bab22d348fb75a16084f70aea2ff4bc0fb8754a063b2bc46'
+            'a5061ce22ec798d92ccc6defe4770691f83db42755c7fc322608c62f9c925523'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '458d5a74cdaf1de427ad18038e310ba328f7be47ce8caed017a5ccda566b79d9'
             'eff62970ee3636da157ad868d63f33b891df5114ce25e12319e7b28bf8fc2a29'
@@ -473,6 +475,8 @@ sha256sums=('702e946d85050640220fbd2504313de1a138510dabc9841fb48a69272e3c3eda'
             '7b53a72ebd7dd27a422712e106d65e0365fbefd9b81010a15eb191df079441d4'
             'fe7e22d23a4e903d6dd9e9911f1c985ba297a63d1804e084d31aa1035465af8f'
             '8ce1dadd940747a617abaa6164f7dacb11d4cfe1ac49e87000a69475233fa33d'
+            '6a91e68e4b826827ec6d8cdecfd50291c114815ff626f838e54e4c9b54fd705e'
             'd670d04c03e41f3dbc0ec9c49e50ba2231f610d8d34cb46e341baef3a8002a27'
-            '57fb1f13bc4cedf471523e0b043962971caa4db107d6e83a527056103ebaf9dc')
+            '57fb1f13bc4cedf471523e0b043962971caa4db107d6e83a527056103ebaf9dc'
+            'f76d22354956f22a4b16b63facfdca4d5d14c309ca702a87d603803e173fa017')
 
