--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -87,18 +87,18 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-6.8-rc6
+_srcname=linux-6.8-rc7
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=4
+pkgrel=7
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/torvalds/t/linux-6.8-rc6.tar.gz"
-  "0000-patch-6.8-rc4-rt4.patch"
+  "https://git.kernel.org/torvalds/t/linux-6.8-rc7.tar.gz"
+  "0000-patch-6.8-rc7-rt6.patch"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
@@ -123,7 +123,9 @@ source=(
   "0041-sched-fair-Dont_force_smt_balancing_when_CPU_has_spare.patch"
   "0120-Softirq-Fix_lock_imbalance_in_local_bh.patch"
   "0018-sched-Add_latency_priority_for_CFS_class.patch"
+  "0101-sched-Fair-DL-server.patch"
   "0099-cpu-Force-Enable-VMX-hack.patch"
+  "0123-thermal-netlink-intel_hfi-Enable-HFI-feature-only-when-required.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -471,10 +473,10 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('1a1baf80be207cc07a38d2fc348e3c59624900f0584feeaf152f0ec0690acfbe'
-            '0fdf788e93e7b78eb729d88aeff46d8c86f07b1f038b9658070df4efdac62a11'
+sha256sums=('7dff9585f59c09794344a7e29006b170b76b45bf9880cf011cf3e0a15c1f0768'
+            '415f8c3287d87bd9a79192797b06155cf60d3914481eb9209d381e0afb2cabf6'
             '23ec0f372fabde289fb32a6af638c6cd0d9771a57354b5356970422829ad9917'
-            'fcd35e1e9353a4ea3be471c1b87c70aa36be47bf8ff0c84edf44f084fd4b5a9a'
+            '7ef49fa3e7b7de50402206a90f85c0b96c8acf522ff4e57ab78694f8a3da53fb'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '458d5a74cdaf1de427ad18038e310ba328f7be47ce8caed017a5ccda566b79d9'
             'eff62970ee3636da157ad868d63f33b891df5114ce25e12319e7b28bf8fc2a29'
@@ -497,5 +499,7 @@ sha256sums=('1a1baf80be207cc07a38d2fc348e3c59624900f0584feeaf152f0ec0690acfbe'
             'd670d04c03e41f3dbc0ec9c49e50ba2231f610d8d34cb46e341baef3a8002a27'
             '57fb1f13bc4cedf471523e0b043962971caa4db107d6e83a527056103ebaf9dc'
             'f76d22354956f22a4b16b63facfdca4d5d14c309ca702a87d603803e173fa017'
-            'fe46b085b9f04957eb941eb44c5276f5af6630a22e55c0487566d76c7ad28558')
+            '0c2c065361e95e8a76314a6385f9c85d1eb29ece4ea2215b631110d9370a5814'
+            'fe46b085b9f04957eb941eb44c5276f5af6630a22e55c0487566d76c7ad28558'
+            'fd44f54c40ad3f1caa4f6801ec896f920895a26791605f2d1ad2c87a509e113e')
 
