--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -64,7 +64,11 @@ _disable_debug=
 # Enable zram/zswap ZSTD compression
 _zstd_compression=y
 
+# Enable NetFilter Full Cone Nat
 _nf_cone=y
+
+# Enable No HZ Full
+_tickrate=full
 
 # VMX hack: Set VMX enabled, even if disabled in the BIOS.  Microsoft
 # disables VMX on my Micosft-Suface 7 BIOS (and it can't be enabled!). Skip
@@ -81,6 +85,16 @@ _vmx_hack=
 # Don't enable unless you know what you are doing.
 _no_RT_throttle=
 
+# Enable converting sched_feat() into compile-time implementation
+# This allows the compiler to make better optimizations to scheduler
+# code. This only supports my config. 
+#
+# I can't possibly test all configs, and I am explicit in a few spots of
+# the sched code, where I have a feature enabled, or disabled. That said,
+# assuming none of the sched options or preemption model are messed with
+# and the config is close to mine: it probably will work fine. WIP!
+_sched_feat_comp=
+
  pkgbase=linux-nspa
 _major=6.9
 _minor=0
@@ -91,17 +105,17 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-6.9-rc5
+_srcname=linux-6.9-rc6
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=13
+pkgrel=17
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/torvalds/t/linux-6.9-rc5.tar.gz"
+  "https://git.kernel.org/torvalds/t/linux-6.9-rc6.tar.gz"
   "0000-patch-6.9-rc2-rt1.patch"
   "config"
   "config_surface7"
@@ -124,9 +138,9 @@ source=(
   "0102-Sched-Improve_rq_selection_for_blocked_task_when_affinity_changes.patch"
   "0101-sched-Fair-DL-server_V6.patch"
   "0202-sched-fair-Always_update_CPU_capacity_when_load_balancing.patch"
+  "0203-sched-core-eevdf-updates-fixes-tip-6.9-rc5.patch"
   "0099-cpu-Force-Enable-VMX-hack.patch"
   "0201-sched-rt-Disable_RT_throttling-CFS-DL_Servers.patch"
-  "0203-sched-core-eevdf-updates-fixes-tip-6.9-rc5.patch"
   "1001-sched-eevdf-Add-feature-comments.patch"
   "1002-sched-eevdf-Remove-min_vruntime_copy.patch"
   "1003-sched-fair-Cleanup-pick_task_fair-vs-throttle.patch"
@@ -139,6 +153,13 @@ source=(
   "1010-sched-eevdf-Allow-shorter-slices-to-wakeup-preempt.patch"
   "1011-sched-eevdf-Limit_preemption_a_little_more.patch"
   "1012-sched-eevdf-Use-sched_attr-sched_runtime-to-set-requ.patch"
+  "1101-sched-fair-Reduce_PELT_half-life_from_32ms_to_16ms.patch"
+  "1102-misc-Avoid_Dynamic_Mem_Allocations.patch"
+  "1103-drm-Convert_CPU-invariant_uninterruptible_waits_to_TASK_IDLE.patch"
+  "1104-Workqueue-Fix_divide_error-in-wq_update_node_max_active.patch"
+  "1105-rcu-Fix_suspicious_RCU_usage_in-__do_softirq.patch"
+  "1107-block-set_rq_affinity_to_force_full.patch"
+  "9999-sched_feat-compile-time.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -161,6 +182,9 @@ prepare() {
       echo "Applying patch $src..."
       patch -Np1 < "../$src"
     elif [[ $src == "201-sched-rt-Disable_RT_throttling-CFS-DL_Servers.patch" && $_no_RT_throttle == "y" ]]; then
+      echo "Applying patch $src..."
+      patch -Np1 < "../$src"
+    elif [[ $src == "9999-sched_feat-compile-time.patch" && $_sched_feat_comp == "y" ]]; then
       echo "Applying patch $src..."
       patch -Np1 < "../$src"
     elif [[ $src == *.patch ]]; then
@@ -488,10 +512,10 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('1f80f8eaf946a4365386a0c752fa957951bc79c8fb2721547d7c90ae10270af5'
+sha256sums=('da2a747ddffac0cd3f319fcb4bcb894ed943a21e22c93be19d2dbe7c1abe9d43'
             '2c923b6210eb2f3220d5a956b28c901be91d7873d117a9a2379b0577fb5e413c'
             '15517a8f9a761515d7507aae0cd089a49d4bfc64946de5305205cf07cf2791f5'
-            'ab0a37ad8fdac7bdae8ab2308c8909fb9cedf1d137e2db68e1214f156a50356e'
+            'bf80e82ec5369d4414e260c938f89c96df6fbb625ca54902d5a527b7b91e122f'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '458d5a74cdaf1de427ad18038e310ba328f7be47ce8caed017a5ccda566b79d9'
             'eff62970ee3636da157ad868d63f33b891df5114ce25e12319e7b28bf8fc2a29'
@@ -511,9 +535,9 @@ sha256sums=('1f80f8eaf946a4365386a0c752fa957951bc79c8fb2721547d7c90ae10270af5'
             '299caa16bc960c3907e9513354e04f1f7683e4cb4972882ec5e92652f42a7070'
             'c5f27076e563cf1b7e5555cf6ebba97dc07c66feb5a5149b731ac1a4c92c5da9'
             '82427ed401357b5dbc4d095db2abc12d003501da31d49b2acd0c7899def50b2b'
+            '78bf2520b159bf1e2f61a6c231470c8383c2837fd9c9da5f39143577c2b40058'
             'fe46b085b9f04957eb941eb44c5276f5af6630a22e55c0487566d76c7ad28558'
             '3a776118280a9f28d7f779d86b9a0328673ba4efb558ca4b7a47288a19b96546'
-            '38800301090c361bd5cb38378c91bbc2518e15ee70fa7960ecaa37dd1422ce80'
             'd16531952e0da603999ac9227cf6e055d8755f1fd2a3437a013720e4637c23bb'
             '52b2cd1f42b7554af01e455fe7d51b25715ac1f79ca663c2488e471a55815953'
             '2d7d33bf2eb6bfdaacd0d3a04ccc9f0478a09a1b6712d2316befed4899a7ec27'
@@ -525,5 +549,12 @@ sha256sums=('1f80f8eaf946a4365386a0c752fa957951bc79c8fb2721547d7c90ae10270af5'
             '38696824a7a187888a45f3ad8a6278b9bdf600e45d85e05629a672777800e73c'
             'c35556d4e9540e124e116ae295e67ecd4be2be620215d5c89eda7b4b6f35909c'
             'aa965a4fc11e01ec58440c8443aed427c7c04805bee0ac44fbd05c28ab4fb845'
-            '281697f0dc321edfbb1025e392e497647d246c0ecbbecb4ddb6dc6aa563d1369')
+            '281697f0dc321edfbb1025e392e497647d246c0ecbbecb4ddb6dc6aa563d1369'
+            '4352a282b865b2ee50b70d3d2537661dedc9617463cd3e61ddc52e12bb8b53ac'
+            'db5b0d3d82736e8acd9289e7728af3845244c32ff7a8d2e4151e1efbe89f0c09'
+            '79c6dcbf04c30c7edd21beaab80090fb7d00feddc5396e713617463879c65a8e'
+            'a7776f80359426e1add5c3d2895953e7fd970aedb162e639b2df16d7a70fcb23'
+            '17191d2a46a1397eb8673cc37ec6b51926d9d20efabe64ccf72840a43b7cfc08'
+            'a1f803ab71c0b18ffa845a7bfd1ee90d2b2f2ec656cf9bedf0a2db2a2c2869a3'
+            '1b64b8bfa6f2f9fabf5afaaf89c0988ba769fdb3b2920c64bcbf1da6e73b8e8b')
 
