--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -96,7 +96,7 @@ _no_RT_throttle=
 _sched_feat_comp=y
 
  pkgbase=linux-nspa
-_major=6.9
+_major=6.9.1
 _minor=0
 #_minorc=$((_minor+1))
 #_rcver=rc8
@@ -105,18 +105,18 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-6.9
+_srcname=linux-6.9.1
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=1
+pkgrel=3
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/snapshot/linux-6.9.tar.gz"
-  "0000-patch-6.9-rc6-rt4.patch"
+  "https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.9.1.tar.xz"
+  "0000-patch-6.9-rt5.patch"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
@@ -138,7 +138,7 @@ source=(
   "0120-Softirq-Fix_lock_imbalance_in_local_bh.patch"
   "0102-Sched-Improve_rq_selection_for_blocked_task_when_affinity_changes.patch"
   "0202-sched-fair-Always_update_CPU_capacity_when_load_balancing.patch"
-  "0203-sched-core-eevdf-updates-fixes-tip-6.9-rc5.patch"
+  "0303-sched-updates-6.10.patch"
   "0099-cpu-Force-Enable-VMX-hack.patch"
   "1001-sched-eevdf-Add-feature-comments.patch"
   "1002-sched-eevdf-Remove-min_vruntime_copy.patch"
@@ -514,8 +514,8 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('10f4067bf636cc93175804acc589aca1a31dc0412ad99e61dd7919b2b035c858'
-            '27d8f234d034736ebb25dcb3f2e222fb40cdcb9dc945d1657f446378761813af'
+sha256sums=('01b414ba98fd189ecd544435caf3860ae2a790e3ec48f5aa70fdf42dc4c5c04a'
+            'cc97edf307ed87eb2fdda6292e5490ccf976fe33ee7a0d9a0283e3e9ee528e76'
             '15517a8f9a761515d7507aae0cd089a49d4bfc64946de5305205cf07cf2791f5'
             '70f3d7c35847eb2faeb8be157bcc08230b1b397f1b1ab30862373f7703b738ff'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
@@ -537,7 +537,7 @@ sha256sums=('10f4067bf636cc93175804acc589aca1a31dc0412ad99e61dd7919b2b035c858'
             '57fb1f13bc4cedf471523e0b043962971caa4db107d6e83a527056103ebaf9dc'
             '299caa16bc960c3907e9513354e04f1f7683e4cb4972882ec5e92652f42a7070'
             '82427ed401357b5dbc4d095db2abc12d003501da31d49b2acd0c7899def50b2b'
-            '8bc9e61b74e769ccc7eed5407180ede41f97cc17f3401e16c09e2c783d8e2ccb'
+            '6ef8c76cd909e80958e57f5f649d8c2182773ca417a64ca39e56711752d94181'
             'fe46b085b9f04957eb941eb44c5276f5af6630a22e55c0487566d76c7ad28558'
             'd16531952e0da603999ac9227cf6e055d8755f1fd2a3437a013720e4637c23bb'
             '52b2cd1f42b7554af01e455fe7d51b25715ac1f79ca663c2488e471a55815953'
@@ -560,4 +560,4 @@ sha256sums=('10f4067bf636cc93175804acc589aca1a31dc0412ad99e61dd7919b2b035c858'
             'a1f803ab71c0b18ffa845a7bfd1ee90d2b2f2ec656cf9bedf0a2db2a2c2869a3'
             '8d4570520b9e7259c788e60e8e6d7c58c58bb5c5a99e46f03d13a23515491a18'
             'f3e6c8c98ea5172f424971bc20f128c7f1f6416af6944f58dad1048ba4dff168'
-            '3085f7477e78ffbfea956aea86e020654fb7f2c81e070d1647419e7f83875238')
+            'cd743120827b6238fb3f83ed8b78c506b39de7b8a93397d12ad518379541ae3e')
